# mgtut

./: CMakeLists.txt  README.md
doc/: data_access.graphml  data_access.html  data_access.org
doc/analysis/: rdf_ana.tex
doc/data_access/: data_access.graphml  data_access.html  data_access.org  local.css
doc/roadmap/: roadmap.org
doc/tpc/param_digi/: param_digi.html  param_digi.org
doc/tpc/v1_geometry/: local.css  tpc_v1.html  tpc_v1.org
doc/vis/phoenix/: local.css  phoenix.html  phoenix.org  phoenix.tex
examples/: CMakeLists.txt
examples/components/: MgTut_AddNoise.cpp  MgTut_AddNoise.h  MgTut_DrawCaloEnergy.cpp  MgTut_DrawCaloEnergy.h  MgTut_EDMIO.cpp  MgTut_EDMIO.h  MgTut_RdmNumber.cpp  MgTut_RdmNumber.h
examples/options/: tut_addnoise.py  tut_chain.py  tut_sim.py
templates/: AlgTemplate.h
